crates/bevy_reflect_compile_fail_tests/tests/reflect_remote/type_mismatch.fail.stderr
error[E0308]: mismatched types
  --> tests/reflect_remote/type_mismatch.fail.rs:25:28
   |
22 |     #[derive(Reflect)]
   |              ------- in this derive macro expansion
...
25 |         #[reflect(remote = "MyBar")]
   |                            ^^^^^^^
   |                            |
   |                            expected `TheirBar`, found `TheirFoo`
   |                            expected due to this
   |
   = note: this error originates in the derive macro `Reflect` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/reflect_remote/type_mismatch.fail.rs:48:28
   |
45 |     #[derive(Reflect)]
   |              ------- in this derive macro expansion
...
48 |         #[reflect(remote = "MyBar")] external_crate::TheirFoo,
   |                            ^^^^^^^
   |                            |
   |                            expected `TheirBar`, found `TheirFoo`
   |                            expected due to this
   |
   = note: this error originates in the derive macro `Reflect` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/reflect_remote/type_mismatch.fail.rs:70:5
   |
70 |     #[reflect_remote(external_crate::TheirBar)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `u32`
   |
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: `?` operator has incompatible types
  --> tests/reflect_remote/type_mismatch.fail.rs:70:5
   |
70 |     #[reflect_remote(external_crate::TheirBar)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `u32`
   |
   = note: `?` operator cannot convert from `u32` to `i32`
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)
help: you can convert a `u32` to an `i32` and panic if the converted value doesn't fit
   |
70 |     #[reflect_remote(external_crate::TheirBar)].try_into().unwrap()
   |                                                ++++++++++++++++++++

error[E0308]: mismatched types
  --> tests/reflect_remote/type_mismatch.fail.rs:73:15
   |
70 |       #[reflect_remote(external_crate::TheirBar)]
   |       -------------------------------------------
   |       |
   |  _____in this procedural macro expansion
   | |
71 | |     enum MyBar {
72 | |         // Reason: Should use `i32`
73 | |         Value(u32),
   | |               ^^-
   | |_______________|_|
   |                 | expected due to the type of this binding
   |                 expected `i32`, found `u32`
   |
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/reflect_remote/type_mismatch.fail.rs:80:32
   |
76 |     #[derive(Reflect)]
   |              ------- in this derive macro expansion
...
80 |             #[reflect(remote = "MyBar")] external_crate::TheirFoo,
   |                                ^^^^^^^
   |                                |
   |                                expected `TheirBar`, found `TheirFoo`
   |                                expected due to this
   |
   = note: this error originates in the derive macro `Reflect` (in Nightly builds, run with -Z macro-backtrace for more info)
